--- a/NewPrateek/res/layout/fragment_newsapp.xml
+++ b/NewPrateek/res/layout/fragment_newsapp.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#fa6a6a"
+    >
+    
+<RelativeLayout
     android:id="@+id/rel_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" 
     android:background="#fa6a6a">
     
 </RelativeLayout>
+</ScrollView>
