--- a/NewPrateek/res/layout/fragment_newsapp.xml
+++ b/NewPrateek/res/layout/fragment_newsapp.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#fa6a6a"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     >
     
 <RelativeLayout
     android:id="@+id/rel_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" 
     android:background="#fa6a6a">
