--- a/NewPrateek/res/layout/fragment_productive.xml
+++ b/NewPrateek/res/layout/fragment_productive.xml
@@ -1,26 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:background="#402020"
+			>
+			
+<RelativeLayout 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#402020"
     android:orientation="vertical" >
-
-    <ImageView
-        android:id="@+id/imageView2"
+    
+    <Button 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageView1"
-        android:layout_marginRight="28dp"
-        android:layout_toLeftOf="@+id/imageView1"
-        />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageView2"
-        android:layout_marginRight="30dp"
-        android:layout_toLeftOf="@+id/imageView2"
+        android:text="Test"
+        android:layout_below="@+id/linlay"
         />
     
+    <LinearLayout 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/linlay"
+        >
+        
+        <TextView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test1"
+            android:id="@+id/name2"
+            />
+        
+        <TextView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test2"
+            android:id="@+id/name3"
+            />        
+            
+    </LinearLayout>
+    
+    
 </RelativeLayout>
+
+</ScrollView>
